// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Activation Key Wizard Confirms on close one next has been clicked 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-label="Create activation key wizard"
          aria-labelledby="pf-modal-part-6"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-7"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-6"
          role="dialog"
        >
          <div
            class="pf-v5-c-wizard"
            style="height: 400px;"
          >
            <div
              class="pf-v5-c-wizard__header"
            >
              <div
                class="pf-v5-c-wizard__close"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-v5-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-7"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-v5-c-wizard__title"
              >
                <h2
                  class="pf-v5-c-wizard__title-text"
                  id="pf-wizard-title-6"
                >
                  Create activation key
                </h2>
              </div>
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-v5-c-wizard__toggle"
            >
              <span
                class="pf-v5-c-wizard__toggle-list"
              >
                <span
                  class="pf-v5-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-v5-c-wizard__toggle-num"
                  >
                    1
                  </span>
                   
                  Name
                </span>
              </span>
              <span
                class="pf-v5-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-v5-c-wizard__outer-wrap"
            >
              <div
                class="pf-v5-c-wizard__inner-wrap"
              >
                <nav
                  aria-label="Create activation key steps"
                  aria-labelledby="pf-wizard-title-6"
                  class="pf-v5-c-wizard__nav"
                  data-ouia-component-id="OUIA-Generated-WizardNav-7"
                  data-ouia-component-type="PF5/WizardNav"
                  data-ouia-safe="true"
                >
                  <ol
                    class="pf-v5-c-wizard__nav-list"
                    role="list"
                  >
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="step"
                        class="pf-v5-c-wizard__nav-link pf-m-current"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-25"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        type="button"
                      >
                        Name
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-26"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="1"
                        type="button"
                      >
                        Workload
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-27"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="2"
                        type="button"
                      >
                        System purpose
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-28"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="3"
                        type="button"
                      >
                        Review
                      </button>
                    </li>
                  </ol>
                </nav>
                <div
                  class="pf-v5-c-wizard__main"
                >
                  <div
                    class="pf-v5-c-wizard__main-body"
                  >
                    <h2
                      class="pf-v5-c-title pf-m-xl pf-v5-u-mb-sm"
                      data-ouia-component-id="OUIA-Generated-Title-7"
                      data-ouia-component-type="PF5/Title"
                      data-ouia-safe="true"
                    >
                      Name key
                    </h2>
                    <p
                      class="pf-v5-u-mb-xl"
                      data-ouia-component-id="OUIA-Generated-Text-7"
                      data-ouia-component-type="PF5/Text"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      This name cannot be modified after the activation key is created.
                    </p>
                    <form
                      class="pf-v5-c-form"
                      novalidate=""
                    >
                      <div
                        class="pf-v5-c-form__group"
                      >
                        <div
                          class="pf-v5-c-form__group-label"
                        >
                          <label
                            class="pf-v5-c-form__label"
                            for="activation-key-name"
                          >
                            <span
                              class="pf-v5-c-form__label-text"
                            >
                              Name
                            </span>
                            <span
                              aria-hidden="true"
                              class="pf-v5-c-form__label-required"
                            >
                               
                              *
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-v5-c-form__group-control"
                        >
                          <span
                            class="pf-v5-c-form-control"
                          >
                            <input
                              aria-invalid="false"
                              data-ouia-component-id="OUIA-Generated-TextInputBase-7"
                              data-ouia-component-type="PF5/TextInput"
                              data-ouia-safe="true"
                              id="activation-key-name"
                              required=""
                              type="text"
                              value=""
                            />
                          </span>
                          <div
                            class="pf-v5-c-form__helper-text"
                          >
                            <div
                              class="pf-v5-c-helper-text"
                            >
                              <div
                                class="pf-v5-c-helper-text__item"
                              >
                                <span
                                  class="pf-v5-c-helper-text__item-text"
                                >
                                  Your activation key name must be unique and must contain only numbers, letters, underscores, and hyphens.
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
              <footer
                class="pf-v5-c-wizard__footer"
              >
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-secondary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-7"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  Back
                </button>
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-primary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-primary-7"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="submit"
                >
                  Next
                </button>
                <div
                  class="pf-v5-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-7"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Create Activation Key Wizard Doesn't confirm on close when nothing has been done 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-label="Create activation key wizard"
          aria-labelledby="pf-modal-part-5"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-6"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-5"
          role="dialog"
        >
          <div
            class="pf-v5-c-wizard"
            style="height: 400px;"
          >
            <div
              class="pf-v5-c-wizard__header"
            >
              <div
                class="pf-v5-c-wizard__close"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-v5-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-6"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-v5-c-wizard__title"
              >
                <h2
                  class="pf-v5-c-wizard__title-text"
                  id="pf-wizard-title-5"
                >
                  Create activation key
                </h2>
              </div>
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-v5-c-wizard__toggle"
            >
              <span
                class="pf-v5-c-wizard__toggle-list"
              >
                <span
                  class="pf-v5-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-v5-c-wizard__toggle-num"
                  >
                    1
                  </span>
                   
                  Name
                </span>
              </span>
              <span
                class="pf-v5-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-v5-c-wizard__outer-wrap"
            >
              <div
                class="pf-v5-c-wizard__inner-wrap"
              >
                <nav
                  aria-label="Create activation key steps"
                  aria-labelledby="pf-wizard-title-5"
                  class="pf-v5-c-wizard__nav"
                  data-ouia-component-id="OUIA-Generated-WizardNav-6"
                  data-ouia-component-type="PF5/WizardNav"
                  data-ouia-safe="true"
                >
                  <ol
                    class="pf-v5-c-wizard__nav-list"
                    role="list"
                  >
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="step"
                        class="pf-v5-c-wizard__nav-link pf-m-current"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-21"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        type="button"
                      >
                        Name
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-22"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="1"
                        type="button"
                      >
                        Workload
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-23"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="2"
                        type="button"
                      >
                        System purpose
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-24"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="3"
                        type="button"
                      >
                        Review
                      </button>
                    </li>
                  </ol>
                </nav>
                <div
                  class="pf-v5-c-wizard__main"
                >
                  <div
                    class="pf-v5-c-wizard__main-body"
                  >
                    <h2
                      class="pf-v5-c-title pf-m-xl pf-v5-u-mb-sm"
                      data-ouia-component-id="OUIA-Generated-Title-6"
                      data-ouia-component-type="PF5/Title"
                      data-ouia-safe="true"
                    >
                      Name key
                    </h2>
                    <p
                      class="pf-v5-u-mb-xl"
                      data-ouia-component-id="OUIA-Generated-Text-6"
                      data-ouia-component-type="PF5/Text"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      This name cannot be modified after the activation key is created.
                    </p>
                    <form
                      class="pf-v5-c-form"
                      novalidate=""
                    >
                      <div
                        class="pf-v5-c-form__group"
                      >
                        <div
                          class="pf-v5-c-form__group-label"
                        >
                          <label
                            class="pf-v5-c-form__label"
                            for="activation-key-name"
                          >
                            <span
                              class="pf-v5-c-form__label-text"
                            >
                              Name
                            </span>
                            <span
                              aria-hidden="true"
                              class="pf-v5-c-form__label-required"
                            >
                               
                              *
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-v5-c-form__group-control"
                        >
                          <span
                            class="pf-v5-c-form-control"
                          >
                            <input
                              aria-invalid="false"
                              data-ouia-component-id="OUIA-Generated-TextInputBase-6"
                              data-ouia-component-type="PF5/TextInput"
                              data-ouia-safe="true"
                              id="activation-key-name"
                              required=""
                              type="text"
                              value=""
                            />
                          </span>
                          <div
                            class="pf-v5-c-form__helper-text"
                          >
                            <div
                              class="pf-v5-c-helper-text"
                            >
                              <div
                                class="pf-v5-c-helper-text__item"
                              >
                                <span
                                  class="pf-v5-c-helper-text__item-text"
                                >
                                  Your activation key name must be unique and must contain only numbers, letters, underscores, and hyphens.
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
              <footer
                class="pf-v5-c-wizard__footer"
              >
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-secondary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-6"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  Back
                </button>
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-primary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-primary-6"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="submit"
                >
                  Next
                </button>
                <div
                  class="pf-v5-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-6"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Create Activation Key Wizard Saves data 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-label="Create activation key wizard"
          aria-labelledby="pf-modal-part-7"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-8"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-7"
          role="dialog"
        >
          <div
            class="pf-v5-c-wizard"
            style="height: 400px;"
          >
            <div
              class="pf-v5-c-wizard__header"
            >
              <div
                class="pf-v5-c-wizard__close"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-v5-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-8"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-v5-c-wizard__title"
              >
                <h2
                  class="pf-v5-c-wizard__title-text"
                  id="pf-wizard-title-7"
                >
                  Create activation key
                </h2>
              </div>
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-v5-c-wizard__toggle"
            >
              <span
                class="pf-v5-c-wizard__toggle-list"
              >
                <span
                  class="pf-v5-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-v5-c-wizard__toggle-num"
                  >
                    1
                  </span>
                   
                  Name
                </span>
              </span>
              <span
                class="pf-v5-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-v5-c-wizard__outer-wrap"
            >
              <div
                class="pf-v5-c-wizard__inner-wrap"
              >
                <nav
                  aria-label="Create activation key steps"
                  aria-labelledby="pf-wizard-title-7"
                  class="pf-v5-c-wizard__nav"
                  data-ouia-component-id="OUIA-Generated-WizardNav-8"
                  data-ouia-component-type="PF5/WizardNav"
                  data-ouia-safe="true"
                >
                  <ol
                    class="pf-v5-c-wizard__nav-list"
                    role="list"
                  >
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="step"
                        class="pf-v5-c-wizard__nav-link pf-m-current"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-29"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        type="button"
                      >
                        Name
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-30"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="1"
                        type="button"
                      >
                        Workload
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-31"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="2"
                        type="button"
                      >
                        System purpose
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-32"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="3"
                        type="button"
                      >
                        Review
                      </button>
                    </li>
                  </ol>
                </nav>
                <div
                  class="pf-v5-c-wizard__main"
                >
                  <div
                    class="pf-v5-c-wizard__main-body"
                  >
                    <h2
                      class="pf-v5-c-title pf-m-xl pf-v5-u-mb-sm"
                      data-ouia-component-id="OUIA-Generated-Title-8"
                      data-ouia-component-type="PF5/Title"
                      data-ouia-safe="true"
                    >
                      Name key
                    </h2>
                    <p
                      class="pf-v5-u-mb-xl"
                      data-ouia-component-id="OUIA-Generated-Text-8"
                      data-ouia-component-type="PF5/Text"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      This name cannot be modified after the activation key is created.
                    </p>
                    <form
                      class="pf-v5-c-form"
                      novalidate=""
                    >
                      <div
                        class="pf-v5-c-form__group"
                      >
                        <div
                          class="pf-v5-c-form__group-label"
                        >
                          <label
                            class="pf-v5-c-form__label"
                            for="activation-key-name"
                          >
                            <span
                              class="pf-v5-c-form__label-text"
                            >
                              Name
                            </span>
                            <span
                              aria-hidden="true"
                              class="pf-v5-c-form__label-required"
                            >
                               
                              *
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-v5-c-form__group-control"
                        >
                          <span
                            class="pf-v5-c-form-control"
                          >
                            <input
                              aria-invalid="false"
                              data-ouia-component-id="OUIA-Generated-TextInputBase-8"
                              data-ouia-component-type="PF5/TextInput"
                              data-ouia-safe="true"
                              id="activation-key-name"
                              required=""
                              type="text"
                              value=""
                            />
                          </span>
                          <div
                            class="pf-v5-c-form__helper-text"
                          >
                            <div
                              class="pf-v5-c-helper-text"
                            >
                              <div
                                class="pf-v5-c-helper-text__item"
                              >
                                <span
                                  class="pf-v5-c-helper-text__item-text"
                                >
                                  Your activation key name must be unique and must contain only numbers, letters, underscores, and hyphens.
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
              <footer
                class="pf-v5-c-wizard__footer"
              >
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-secondary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-8"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  Back
                </button>
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-primary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-primary-8"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="submit"
                >
                  Next
                </button>
                <div
                  class="pf-v5-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-8"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Create Activation Key Wizard renders page 1 correctly 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-label="Create activation key wizard"
          aria-labelledby="pf-modal-part-0"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-1"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-0"
          role="dialog"
        >
          <div
            class="pf-v5-c-wizard"
            style="height: 400px;"
          >
            <div
              class="pf-v5-c-wizard__header"
            >
              <div
                class="pf-v5-c-wizard__close"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-v5-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-1"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-v5-c-wizard__title"
              >
                <h2
                  class="pf-v5-c-wizard__title-text"
                  id="pf-wizard-title-0"
                >
                  Create activation key
                </h2>
              </div>
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-v5-c-wizard__toggle"
            >
              <span
                class="pf-v5-c-wizard__toggle-list"
              >
                <span
                  class="pf-v5-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-v5-c-wizard__toggle-num"
                  >
                    1
                  </span>
                   
                  Name
                </span>
              </span>
              <span
                class="pf-v5-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-v5-c-wizard__outer-wrap"
            >
              <div
                class="pf-v5-c-wizard__inner-wrap"
              >
                <nav
                  aria-label="Create activation key steps"
                  aria-labelledby="pf-wizard-title-0"
                  class="pf-v5-c-wizard__nav"
                  data-ouia-component-id="OUIA-Generated-WizardNav-1"
                  data-ouia-component-type="PF5/WizardNav"
                  data-ouia-safe="true"
                >
                  <ol
                    class="pf-v5-c-wizard__nav-list"
                    role="list"
                  >
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="step"
                        class="pf-v5-c-wizard__nav-link pf-m-current"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-1"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        type="button"
                      >
                        Name
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-2"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="1"
                        type="button"
                      >
                        Workload
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-3"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="2"
                        type="button"
                      >
                        System purpose
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-4"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="3"
                        type="button"
                      >
                        Review
                      </button>
                    </li>
                  </ol>
                </nav>
                <div
                  class="pf-v5-c-wizard__main"
                >
                  <div
                    class="pf-v5-c-wizard__main-body"
                  >
                    <h2
                      class="pf-v5-c-title pf-m-xl pf-v5-u-mb-sm"
                      data-ouia-component-id="OUIA-Generated-Title-1"
                      data-ouia-component-type="PF5/Title"
                      data-ouia-safe="true"
                    >
                      Name key
                    </h2>
                    <p
                      class="pf-v5-u-mb-xl"
                      data-ouia-component-id="OUIA-Generated-Text-1"
                      data-ouia-component-type="PF5/Text"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      This name cannot be modified after the activation key is created.
                    </p>
                    <form
                      class="pf-v5-c-form"
                      novalidate=""
                    >
                      <div
                        class="pf-v5-c-form__group"
                      >
                        <div
                          class="pf-v5-c-form__group-label"
                        >
                          <label
                            class="pf-v5-c-form__label"
                            for="activation-key-name"
                          >
                            <span
                              class="pf-v5-c-form__label-text"
                            >
                              Name
                            </span>
                            <span
                              aria-hidden="true"
                              class="pf-v5-c-form__label-required"
                            >
                               
                              *
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-v5-c-form__group-control"
                        >
                          <span
                            class="pf-v5-c-form-control"
                          >
                            <input
                              aria-invalid="false"
                              data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                              data-ouia-component-type="PF5/TextInput"
                              data-ouia-safe="true"
                              id="activation-key-name"
                              required=""
                              type="text"
                              value=""
                            />
                          </span>
                          <div
                            class="pf-v5-c-form__helper-text"
                          >
                            <div
                              class="pf-v5-c-helper-text"
                            >
                              <div
                                class="pf-v5-c-helper-text__item"
                              >
                                <span
                                  class="pf-v5-c-helper-text__item-text"
                                >
                                  Your activation key name must be unique and must contain only numbers, letters, underscores, and hyphens.
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
              <footer
                class="pf-v5-c-wizard__footer"
              >
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-secondary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-1"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  Back
                </button>
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-primary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-primary-1"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="submit"
                >
                  Next
                </button>
                <div
                  class="pf-v5-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-1"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Create Activation Key Wizard renders page 2 correctly 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-label="Create activation key wizard"
          aria-labelledby="pf-modal-part-1"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-2"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-1"
          role="dialog"
        >
          <div
            class="pf-v5-c-wizard"
            style="height: 400px;"
          >
            <div
              class="pf-v5-c-wizard__header"
            >
              <div
                class="pf-v5-c-wizard__close"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-v5-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-2"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-v5-c-wizard__title"
              >
                <h2
                  class="pf-v5-c-wizard__title-text"
                  id="pf-wizard-title-1"
                >
                  Create activation key
                </h2>
              </div>
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-v5-c-wizard__toggle"
            >
              <span
                class="pf-v5-c-wizard__toggle-list"
              >
                <span
                  class="pf-v5-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-v5-c-wizard__toggle-num"
                  >
                    1
                  </span>
                   
                  Name
                </span>
              </span>
              <span
                class="pf-v5-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-v5-c-wizard__outer-wrap"
            >
              <div
                class="pf-v5-c-wizard__inner-wrap"
              >
                <nav
                  aria-label="Create activation key steps"
                  aria-labelledby="pf-wizard-title-1"
                  class="pf-v5-c-wizard__nav"
                  data-ouia-component-id="OUIA-Generated-WizardNav-2"
                  data-ouia-component-type="PF5/WizardNav"
                  data-ouia-safe="true"
                >
                  <ol
                    class="pf-v5-c-wizard__nav-list"
                    role="list"
                  >
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="step"
                        class="pf-v5-c-wizard__nav-link pf-m-current"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-5"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        type="button"
                      >
                        Name
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-6"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="1"
                        type="button"
                      >
                        Workload
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-7"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="2"
                        type="button"
                      >
                        System purpose
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-8"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="3"
                        type="button"
                      >
                        Review
                      </button>
                    </li>
                  </ol>
                </nav>
                <div
                  class="pf-v5-c-wizard__main"
                >
                  <div
                    class="pf-v5-c-wizard__main-body"
                  >
                    <h2
                      class="pf-v5-c-title pf-m-xl pf-v5-u-mb-sm"
                      data-ouia-component-id="OUIA-Generated-Title-2"
                      data-ouia-component-type="PF5/Title"
                      data-ouia-safe="true"
                    >
                      Name key
                    </h2>
                    <p
                      class="pf-v5-u-mb-xl"
                      data-ouia-component-id="OUIA-Generated-Text-2"
                      data-ouia-component-type="PF5/Text"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      This name cannot be modified after the activation key is created.
                    </p>
                    <form
                      class="pf-v5-c-form"
                      novalidate=""
                    >
                      <div
                        class="pf-v5-c-form__group"
                      >
                        <div
                          class="pf-v5-c-form__group-label"
                        >
                          <label
                            class="pf-v5-c-form__label"
                            for="activation-key-name"
                          >
                            <span
                              class="pf-v5-c-form__label-text"
                            >
                              Name
                            </span>
                            <span
                              aria-hidden="true"
                              class="pf-v5-c-form__label-required"
                            >
                               
                              *
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-v5-c-form__group-control"
                        >
                          <span
                            class="pf-v5-c-form-control"
                          >
                            <input
                              aria-invalid="false"
                              data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                              data-ouia-component-type="PF5/TextInput"
                              data-ouia-safe="true"
                              id="activation-key-name"
                              required=""
                              type="text"
                              value=""
                            />
                          </span>
                          <div
                            class="pf-v5-c-form__helper-text"
                          >
                            <div
                              class="pf-v5-c-helper-text"
                            >
                              <div
                                class="pf-v5-c-helper-text__item"
                              >
                                <span
                                  class="pf-v5-c-helper-text__item-text"
                                >
                                  Your activation key name must be unique and must contain only numbers, letters, underscores, and hyphens.
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
              <footer
                class="pf-v5-c-wizard__footer"
              >
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-secondary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-2"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  Back
                </button>
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-primary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-primary-2"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="submit"
                >
                  Next
                </button>
                <div
                  class="pf-v5-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-2"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Create Activation Key Wizard renders page 3 correctly 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-label="Create activation key wizard"
          aria-labelledby="pf-modal-part-2"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-3"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-2"
          role="dialog"
        >
          <div
            class="pf-v5-c-wizard"
            style="height: 400px;"
          >
            <div
              class="pf-v5-c-wizard__header"
            >
              <div
                class="pf-v5-c-wizard__close"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-v5-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-3"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-v5-c-wizard__title"
              >
                <h2
                  class="pf-v5-c-wizard__title-text"
                  id="pf-wizard-title-2"
                >
                  Create activation key
                </h2>
              </div>
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-v5-c-wizard__toggle"
            >
              <span
                class="pf-v5-c-wizard__toggle-list"
              >
                <span
                  class="pf-v5-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-v5-c-wizard__toggle-num"
                  >
                    1
                  </span>
                   
                  Name
                </span>
              </span>
              <span
                class="pf-v5-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-v5-c-wizard__outer-wrap"
            >
              <div
                class="pf-v5-c-wizard__inner-wrap"
              >
                <nav
                  aria-label="Create activation key steps"
                  aria-labelledby="pf-wizard-title-2"
                  class="pf-v5-c-wizard__nav"
                  data-ouia-component-id="OUIA-Generated-WizardNav-3"
                  data-ouia-component-type="PF5/WizardNav"
                  data-ouia-safe="true"
                >
                  <ol
                    class="pf-v5-c-wizard__nav-list"
                    role="list"
                  >
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="step"
                        class="pf-v5-c-wizard__nav-link pf-m-current"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-9"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        type="button"
                      >
                        Name
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-10"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="1"
                        type="button"
                      >
                        Workload
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-11"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="2"
                        type="button"
                      >
                        System purpose
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-12"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="3"
                        type="button"
                      >
                        Review
                      </button>
                    </li>
                  </ol>
                </nav>
                <div
                  class="pf-v5-c-wizard__main"
                >
                  <div
                    class="pf-v5-c-wizard__main-body"
                  >
                    <h2
                      class="pf-v5-c-title pf-m-xl pf-v5-u-mb-sm"
                      data-ouia-component-id="OUIA-Generated-Title-3"
                      data-ouia-component-type="PF5/Title"
                      data-ouia-safe="true"
                    >
                      Name key
                    </h2>
                    <p
                      class="pf-v5-u-mb-xl"
                      data-ouia-component-id="OUIA-Generated-Text-3"
                      data-ouia-component-type="PF5/Text"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      This name cannot be modified after the activation key is created.
                    </p>
                    <form
                      class="pf-v5-c-form"
                      novalidate=""
                    >
                      <div
                        class="pf-v5-c-form__group"
                      >
                        <div
                          class="pf-v5-c-form__group-label"
                        >
                          <label
                            class="pf-v5-c-form__label"
                            for="activation-key-name"
                          >
                            <span
                              class="pf-v5-c-form__label-text"
                            >
                              Name
                            </span>
                            <span
                              aria-hidden="true"
                              class="pf-v5-c-form__label-required"
                            >
                               
                              *
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-v5-c-form__group-control"
                        >
                          <span
                            class="pf-v5-c-form-control"
                          >
                            <input
                              aria-invalid="false"
                              data-ouia-component-id="OUIA-Generated-TextInputBase-3"
                              data-ouia-component-type="PF5/TextInput"
                              data-ouia-safe="true"
                              id="activation-key-name"
                              required=""
                              type="text"
                              value=""
                            />
                          </span>
                          <div
                            class="pf-v5-c-form__helper-text"
                          >
                            <div
                              class="pf-v5-c-helper-text"
                            >
                              <div
                                class="pf-v5-c-helper-text__item"
                              >
                                <span
                                  class="pf-v5-c-helper-text__item-text"
                                >
                                  Your activation key name must be unique and must contain only numbers, letters, underscores, and hyphens.
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
              <footer
                class="pf-v5-c-wizard__footer"
              >
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-secondary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-3"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  Back
                </button>
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-primary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-primary-3"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="submit"
                >
                  Next
                </button>
                <div
                  class="pf-v5-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-3"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Create Activation Key Wizard renders page 4 correctly 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-label="Create activation key wizard"
          aria-labelledby="pf-modal-part-3"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-4"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-3"
          role="dialog"
        >
          <div
            class="pf-v5-c-wizard"
            style="height: 400px;"
          >
            <div
              class="pf-v5-c-wizard__header"
            >
              <div
                class="pf-v5-c-wizard__close"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-v5-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-4"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-v5-c-wizard__title"
              >
                <h2
                  class="pf-v5-c-wizard__title-text"
                  id="pf-wizard-title-3"
                >
                  Create activation key
                </h2>
              </div>
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-v5-c-wizard__toggle"
            >
              <span
                class="pf-v5-c-wizard__toggle-list"
              >
                <span
                  class="pf-v5-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-v5-c-wizard__toggle-num"
                  >
                    1
                  </span>
                   
                  Name
                </span>
              </span>
              <span
                class="pf-v5-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-v5-c-wizard__outer-wrap"
            >
              <div
                class="pf-v5-c-wizard__inner-wrap"
              >
                <nav
                  aria-label="Create activation key steps"
                  aria-labelledby="pf-wizard-title-3"
                  class="pf-v5-c-wizard__nav"
                  data-ouia-component-id="OUIA-Generated-WizardNav-4"
                  data-ouia-component-type="PF5/WizardNav"
                  data-ouia-safe="true"
                >
                  <ol
                    class="pf-v5-c-wizard__nav-list"
                    role="list"
                  >
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="step"
                        class="pf-v5-c-wizard__nav-link pf-m-current"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-13"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        type="button"
                      >
                        Name
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-14"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="1"
                        type="button"
                      >
                        Workload
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-15"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="2"
                        type="button"
                      >
                        System purpose
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-16"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="3"
                        type="button"
                      >
                        Review
                      </button>
                    </li>
                  </ol>
                </nav>
                <div
                  class="pf-v5-c-wizard__main"
                >
                  <div
                    class="pf-v5-c-wizard__main-body"
                  >
                    <h2
                      class="pf-v5-c-title pf-m-xl pf-v5-u-mb-sm"
                      data-ouia-component-id="OUIA-Generated-Title-4"
                      data-ouia-component-type="PF5/Title"
                      data-ouia-safe="true"
                    >
                      Name key
                    </h2>
                    <p
                      class="pf-v5-u-mb-xl"
                      data-ouia-component-id="OUIA-Generated-Text-4"
                      data-ouia-component-type="PF5/Text"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      This name cannot be modified after the activation key is created.
                    </p>
                    <form
                      class="pf-v5-c-form"
                      novalidate=""
                    >
                      <div
                        class="pf-v5-c-form__group"
                      >
                        <div
                          class="pf-v5-c-form__group-label"
                        >
                          <label
                            class="pf-v5-c-form__label"
                            for="activation-key-name"
                          >
                            <span
                              class="pf-v5-c-form__label-text"
                            >
                              Name
                            </span>
                            <span
                              aria-hidden="true"
                              class="pf-v5-c-form__label-required"
                            >
                               
                              *
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-v5-c-form__group-control"
                        >
                          <span
                            class="pf-v5-c-form-control"
                          >
                            <input
                              aria-invalid="false"
                              data-ouia-component-id="OUIA-Generated-TextInputBase-4"
                              data-ouia-component-type="PF5/TextInput"
                              data-ouia-safe="true"
                              id="activation-key-name"
                              required=""
                              type="text"
                              value=""
                            />
                          </span>
                          <div
                            class="pf-v5-c-form__helper-text"
                          >
                            <div
                              class="pf-v5-c-helper-text"
                            >
                              <div
                                class="pf-v5-c-helper-text__item"
                              >
                                <span
                                  class="pf-v5-c-helper-text__item-text"
                                >
                                  Your activation key name must be unique and must contain only numbers, letters, underscores, and hyphens.
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
              <footer
                class="pf-v5-c-wizard__footer"
              >
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-secondary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-4"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  Back
                </button>
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-primary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-primary-4"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="submit"
                >
                  Next
                </button>
                <div
                  class="pf-v5-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-4"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Create Activation Key Wizard renders page 5 correctly 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-label="Create activation key wizard"
          aria-labelledby="pf-modal-part-4"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-5"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-4"
          role="dialog"
        >
          <div
            class="pf-v5-c-wizard"
            style="height: 400px;"
          >
            <div
              class="pf-v5-c-wizard__header"
            >
              <div
                class="pf-v5-c-wizard__close"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-v5-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-5"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-v5-c-wizard__title"
              >
                <h2
                  class="pf-v5-c-wizard__title-text"
                  id="pf-wizard-title-4"
                >
                  Create activation key
                </h2>
              </div>
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-v5-c-wizard__toggle"
            >
              <span
                class="pf-v5-c-wizard__toggle-list"
              >
                <span
                  class="pf-v5-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-v5-c-wizard__toggle-num"
                  >
                    1
                  </span>
                   
                  Name
                </span>
              </span>
              <span
                class="pf-v5-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-v5-c-wizard__outer-wrap"
            >
              <div
                class="pf-v5-c-wizard__inner-wrap"
              >
                <nav
                  aria-label="Create activation key steps"
                  aria-labelledby="pf-wizard-title-4"
                  class="pf-v5-c-wizard__nav"
                  data-ouia-component-id="OUIA-Generated-WizardNav-5"
                  data-ouia-component-type="PF5/WizardNav"
                  data-ouia-safe="true"
                >
                  <ol
                    class="pf-v5-c-wizard__nav-list"
                    role="list"
                  >
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="step"
                        class="pf-v5-c-wizard__nav-link pf-m-current"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-17"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        type="button"
                      >
                        Name
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-18"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="1"
                        type="button"
                      >
                        Workload
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-19"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="2"
                        type="button"
                      >
                        System purpose
                      </button>
                    </li>
                    <li
                      class="pf-v5-c-wizard__nav-item"
                    >
                      <button
                        aria-current="false"
                        aria-disabled="true"
                        class="pf-v5-c-wizard__nav-link pf-m-disabled"
                        data-ouia-component-id="OUIA-Generated-WizardNavItem-20"
                        data-ouia-component-type="PF5/WizardNavItem"
                        data-ouia-safe="true"
                        disabled=""
                        id="3"
                        type="button"
                      >
                        Review
                      </button>
                    </li>
                  </ol>
                </nav>
                <div
                  class="pf-v5-c-wizard__main"
                >
                  <div
                    class="pf-v5-c-wizard__main-body"
                  >
                    <h2
                      class="pf-v5-c-title pf-m-xl pf-v5-u-mb-sm"
                      data-ouia-component-id="OUIA-Generated-Title-5"
                      data-ouia-component-type="PF5/Title"
                      data-ouia-safe="true"
                    >
                      Name key
                    </h2>
                    <p
                      class="pf-v5-u-mb-xl"
                      data-ouia-component-id="OUIA-Generated-Text-5"
                      data-ouia-component-type="PF5/Text"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      This name cannot be modified after the activation key is created.
                    </p>
                    <form
                      class="pf-v5-c-form"
                      novalidate=""
                    >
                      <div
                        class="pf-v5-c-form__group"
                      >
                        <div
                          class="pf-v5-c-form__group-label"
                        >
                          <label
                            class="pf-v5-c-form__label"
                            for="activation-key-name"
                          >
                            <span
                              class="pf-v5-c-form__label-text"
                            >
                              Name
                            </span>
                            <span
                              aria-hidden="true"
                              class="pf-v5-c-form__label-required"
                            >
                               
                              *
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-v5-c-form__group-control"
                        >
                          <span
                            class="pf-v5-c-form-control"
                          >
                            <input
                              aria-invalid="false"
                              data-ouia-component-id="OUIA-Generated-TextInputBase-5"
                              data-ouia-component-type="PF5/TextInput"
                              data-ouia-safe="true"
                              id="activation-key-name"
                              required=""
                              type="text"
                              value=""
                            />
                          </span>
                          <div
                            class="pf-v5-c-form__helper-text"
                          >
                            <div
                              class="pf-v5-c-helper-text"
                            >
                              <div
                                class="pf-v5-c-helper-text__item"
                              >
                                <span
                                  class="pf-v5-c-helper-text__item-text"
                                >
                                  Your activation key name must be unique and must contain only numbers, letters, underscores, and hyphens.
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
              <footer
                class="pf-v5-c-wizard__footer"
              >
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-secondary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-secondary-5"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  Back
                </button>
                <button
                  aria-disabled="true"
                  class="pf-v5-c-button pf-m-primary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-primary-5"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="submit"
                >
                  Next
                </button>
                <div
                  class="pf-v5-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-5"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
